# numerics-from-scratch

./: .gitignore  .gitmodules  algebra.py  batchmath.py  bench.py  bundle_adjustment_result.py  cookbook_ba.py  finite_differences.py  finite_differences.py.bak  gauss_elim.py  gauss_newton.py  gauss_newton_tf.py  levenberg-marquardt.py  levenberg_marquardt.py  levenberg_marquardt_test.py  lie.py  lie_test.py  numpy_test.py  numpy_test.py.bak  problem.py  scipy_ba.py  test.py
ceres/: BALProblem.h  CMakeLists.txt  README.md  ba.cpp  costs.md  hello_ceres.cpp  hello_ceres_nonlin_lsq.cpp  nonlin_lsq.cpp  powell.cpp  time-microbench.md
csc2305/: functions.py  optimization_results.py  utils.py
csc2305/a03/: line_search_family.py
csc2305/a04/: dogleg.py
csc2305/a05/: conjugate_gradient.py
csc2305/project/: .gitignore  BALProblem.cpp  BALProblem.h  BundleAdjustment.cpp  CMakeLists.txt  CsvWriter.cpp  CsvWriter.h  Experiment.cpp  README.md  Records.h  Utils.cpp  ba.cpp  bal_problem.cpp  bal_problem.h  build.sh  bundle_adjustment.cpp  bundle_adjustment.h  csv_writer.cpp  csv_writer.h  experiment.cpp  experiment_configs.h  get_data.py  openmp.cpp  utils.cpp  utils.h
csc2305/project/analysis/: AnalyzeCeresExperiments.ipynb  analyze_experiments.py  requirements.txt
csc2305/project/scripts/: install_cmake.sh
data/: chol.py
data/test/: so3_rot.mat  so3_twist.mat
matlab/: equality.m  gen_test.m  jacobian_sanity.m  jacobian_sanity_2.m  matexp.m  precision.m  rodrigues_inv.m  skewsym.m
matlab-2021/: README.md  newton_raphson.m
